# p2p-server-file-storage

./: .gitignore  CMakeLists.txt  README.md  build-mingw.bat  build.bat  run-demo.bat  run-gui.bat  run-servers.bat
client/: CMakeLists.txt
client-gui/: BUILD.md  CMakeLists.txt  README.md
client-gui/include/: chunk_info.h  chunk_viewer.h  main_window.h
client-gui/src/: chunk_viewer.cpp  main.cpp  main_window.cpp
client/include/core/: chunk_processor.h  client.h  download_manager.h  metadata_client.h  node_client.h  upload_manager.h
client/src/: main.cpp
client/src/core/: chunk_processor.cpp  client.cpp  download_manager.cpp  metadata_client.cpp  node_client.cpp  upload_manager.cpp
common/: CMakeLists.txt
common/include/: hash_utils.h  network_utils.h
common/src/: hash_utils.cpp  network_utils.cpp
docs/architecture/: 01-overview.md  02-metadata-server.md  03-storage-node.md  04-client.md  05-network-protocol.md  06-project-structure.md
docs/architecture/client/: architecture.md  tasks.md
docs/architecture/metadata-server/: architecture.md  tasks.md
docs/architecture/storage-node/: architecture.md  tasks.md
metadata-server/: CMakeLists.txt
metadata-server/include/: metadata_manager.h  node_manager.h  protocol_handler.h  server.h
metadata-server/src/: main.cpp  metadata_manager.cpp  node_manager.cpp  protocol_handler.cpp  server.cpp
storage-node/: CMakeLists.txt
storage-node/include/platform/interfaces/: idisk_handler.h  ifile_handler.h  ipath_handler.h
storage-node/include/platform/windows/: windows_file_handler.h
storage-node/src/platform/windows/: windows_file_handler.cpp
